# todoer

./: .gitignore  LICENSE  debug_it.sh  docker-compose.yml  restart_it.sh  test_it.sh  win_run_tests.cmd
todoer_api/: Dockerfile  README.rst  config.py  example.db  init_alembic.sh  main.py  prestart.sh  pyproject.toml  pytest.ini  start-reload.sh  start.sh  upd_db.sh
todoer_api/alembic/: env.py
todoer_api/alembic/versions/: fc6c3635983b_add_user_and_task.py
todoer_api/app/: backend_pre_start.py  main.py  task_data.py
todoer_api/app/core/: config.py
todoer_api/app/crud/: __init__.py  base.py  crud_task.py  crud_user.py
todoer_api/app/data_layer/: data_obj_mgr.py  database.py  dl_exception.py  id_generator.py  mongo_connection.py
todoer_api/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
todoer_api/app/model/: base.py  data_layer.py  task.py  todoerinfo.py  user.py
todoer_api/app/models/: __init__.py  task.py  user.py
todoer_api/app/schemas/: __init__.py  task.py  user.py
todoer_api/app/templates/: index.html
todoer_api/tests/: conftest.py  test_todoer_api.py
todoer_api/todoer_api/: __init__.py  data_layer.py  model.py  test_db.py
