[tool.poetry]
name = "todoer_api"
version = "0.1.0"
description = ""
authors = ["Todd Cooper <todd.coops@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}
Jinja2 = "^3.0.3"
motor = "^2.5.1"
httpx = "^0.22.0"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.18.2"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"
pytest = "^6.1.0"
black = "^21.11b1"
ipython = "^7.30.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
